<resources>
    <string name="app_name">VClassrooms</string>
    <string name="BASE_URL">http://101.53.154.200:80/api/</string>
    <string name="IMAGEBASE_URL">http://101.53.154.200:80/images/</string>
    <string name="version">Version: 1.0.0.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_internet">Internet is not available , Please check your network and try again</string>
    <string name="Alert">Alert</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="Permission_Denied">Permission Denied</string>
    <string name="Please_give_permission_for_app_functionality">Please give permission for app functionality</string>
    <string name="If_you_reject_permission_you_can_not_use_this_service">If you reject permission,you can not use this service</string>
    <string name="Please_turn_on_permissions_at">Please turn on permissions at [Setting] > [Permission]</string>
    <string name="settings">setting</string>
    <string name="we_have_a">We have a solution for YOU</string>
    <string name="diocese">Diocese! School! Big or small, we have you covered</string>
    <string name="saint_of_day">Saint of the day</string>
    <string name="prayer">Prayer</string>
    <string name="school_id">School Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="enter_school_id">Please enter school id</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_userpassword">Please enter password</string>
    <string name="error_message">Something went wrong, please try again.</string>
    <string name="fail_message">Something went wrong, please try again.</string>
    <string name="unauthorize_message">Something went wrong, please try again.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="incorrect_username_password">You have entered an invalid username or password</string>
    <string name="no_data">No Data Available</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Setting">Setting</string>
    <string name="directory">Directory</string>
    <string name="Logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="staff">Staff</string>
    <string name="change_password">Change Password</string>
    <string name="Please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="no_internet_swipe_to_refresh">No internet swipe to refresh</string>
    <string name="Current_Class">Current class</string>
    <string name="Email_Id">Email id</string>
    <string name="Phone_no">Phone no</string>
    <string name="parent">Parent</string>
    <string name="gallery">Gallery</string>
    <string name="no_result_found">No Result Found</string>
    <string name="select_student_to_change_password">Select student to change password</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="your_dowloads_will_be_available_soon">Your downloads will be available soon</string>
    <string name="file_dowloads">File downloads</string>
    <string name="document_saved">Document saved successfully</string>
    <string name="file_format_jpg_png_pdf">File format: JPG, PNG</string>
    <string name="max_10_images">Max 10 files uploaded</string>

    <string name="pick_image_from_gallery">PICK IMAGE FROM GALLERY</string>
    <string name="text_images">%1$d Images</string>
    <string name="text_button_done">Done</string>
    <string name="text_title_activity_album">Select photos</string>
    <string name="text_title_dialog_sort_by_album">Sort album by</string>
    <string name="text_title_dialog_sort_by_photo">Sort photo by</string>
    <string name="action_sort">Sort</string>
    <string name="next">Next</string>
    <string name="selected">Selected</string>
    <string name="Please_select_at_least">Please select at least</string>
    <string name="images">images</string>
    <string name="limit">Limit</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="date_error">Start Date cannot be greater than End date</string>
    <string name="success">Success</string>
    <string name="leave_reason_error">Please enter reason for leave</string>
    <string name="leave_deatil_error">Please enter leave detail</string>
    <string name="leave_type_error">Please select leave type</string>
    <string name="leave_apply_successfully">Leave apply successfully</string>
    <string name="file_format_pdf_zip_doc_docx">File format: DOC, DOCX, PPT, PPTX, XLS, XSLX, TXT, PDF, ZIP</string>

    <string name="last_6_month">Last 6 month</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="current_date">Current Date</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
</resources>