<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginLeft="@dimen/_8sdp"
    android:layout_marginRight="@dimen/_8sdp"
    android:layout_marginBottom="@dimen/_1sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="@dimen/_8sdp"
    app:cardMaxElevation="20dp"
    >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        >
        <LinearLayout
            android:id="@+id/student_linear"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_7sdp"
            android:weightSum="3">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1.3"
                android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/profile"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvName"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text=""
                android:gravity="center|left"
                android:textColor="@color/btn_color"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/proxima_nova"
                android:textColorHint="@color/gray_1100"
                android:layout_weight="0.7"/>
            <TextView
                android:id="@+id/tvGrade"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text=""
                android:textSize="@dimen/_12sdp"
                android:gravity="right"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:fontFamily="@font/proxima_nova"
                android:textColorHint="@color/gray_1100"
                android:layout_weight="1."
                android:layout_marginRight="2dp"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_marginTop="@dimen/_8sdp"/>
        <LinearLayout
            android:id="@+id/linearChild"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_8sdp"
            android:visibility="visible">
           
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_8sdp"
                android:weightSum="2"
                android:layout_weight="1">
                <TextView
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Current_Class"
                    android:gravity="center|left"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/proxima_nova"
                    android:layout_weight="1.3"
                    android:textColorHint="@color/gray_1100"/>
                <TextView
                    android:textSize="@dimen/_10sdp"
                    android:id="@+id/tvcurrent_class"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text=""
                    android:gravity="center|left"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:fontFamily="@font/proxima_nova"
                    android:textColorHint="@color/gray_1100"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_8sdp"
                android:weightSum="2"
                android:layout_weight="1">
                <TextView
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Email_Id"
                    android:gravity="center|left"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/proxima_nova"
                    android:layout_weight="1.3"
                    android:textColorHint="@color/gray_1100"/>
                <TextView
                    android:textSize="@dimen/_10sdp"
                    android:id="@+id/tvEmailId"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text=""
                    android:gravity="center|left"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:fontFamily="@font/proxima_nova"
                    android:textColorHint="@color/gray_1100"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_8sdp"
                android:weightSum="2"
                android:layout_weight="1">
                <TextView
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/Phone_no"
                    android:gravity="center|left"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/proxima_nova"
                    android:layout_weight="1.3"
                    android:textColorHint="@color/gray_1100"/>
                <TextView
                    android:textSize="@dimen/_10sdp"
                    android:id="@+id/tvPhNo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text=""
                    android:gravity="center|left"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:fontFamily="@font/proxima_nova"
                    android:textColorHint="@color/gray_1100"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:fontFamily="@font/proxima_nova"
                    android:gravity="center|left"
                    android:text="Father Name"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/gray_1100"
                    android:textSize="@dimen/_10sdp" />
                <TextView
                    android:textSize="@dimen/_10sdp"
                    android:id="@+id/tvFatherName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center|left"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:fontFamily="@font/proxima_nova"
                    android:textColorHint="@color/gray_1100"/>
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_weight="1"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:fontFamily="@font/proxima_nova"
                    android:gravity="center|left"
                    android:text="Mother Name"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/gray_1100"
                    android:textSize="@dimen/_10sdp" />
                <TextView
                    android:textSize="@dimen/_10sdp"
                    android:id="@+id/tvmothername"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center|left"
                    android:layout_weight="0.7"
                    android:textColor="@color/black"
                    android:fontFamily="@font/proxima_nova"
                    android:textColorHint="@color/gray_1100"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>